--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zhigang1992/react-native-chat-ui",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "Actively maintained, community-driven chat UI implementation with an optional Firebase BaaS.",
   "homepage": "https://flyer.chat",
   "repository": {
@@ -68,9 +68,9 @@
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
+    "@shopify/flash-list": "*",
     "react": "*",
-    "react-native": "*",
-    "@shopify/flash-list": "*"
+    "react-native": "*"
   },
   "jest": {
     "collectCoverage": true,
